fixed html files

--- a/lagoona/index.html
+++ b/lagoona/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/1 HW/css/style.css">
-  <link rel="stylesheet" href="/1 HW/css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
   <title>Lagoona</title>
   <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
@@ -693,7 +693,7 @@
         </h2>
         <ul class="section-price-list">
           <li class="section-price-item">
-            <img src="/1 HW/img/размещение/23.jpg" alt="Лиловый закат и отель" class="section-price-img">
+            <img src="img/размещение/23.jpg" alt="Лиловый закат и отель" class="section-price-img">
             <div class="section-price-item-block">
               <div class="section-price-day-rating">
                 <p class="section-price-day">
@@ -744,7 +744,7 @@
           </li>
 
           <li class="section-price-item">
-            <img src="/1 HW/img/размещение/24.jpg" alt="Песочный отель с большим бассейном по середине"
+            <img src="img/размещение/24.jpg" alt="Песочный отель с большим бассейном по середине"
               class="section-price-img">
             <div class="section-price-item-block">
               <div class="section-price-day-rating">
@@ -796,7 +796,7 @@
           </li>
 
           <li class="section-price-item">
-            <img src="/1 HW/img/размещение/26.jpg"
+            <img src="img/размещение/26.jpg"
               alt="Отель с змееобразым бассейном и мостиком чекрез него, много пальм" class="section-price-img">
             <div class="section-price-item-block">
               <div class="section-price-day-rating">
@@ -848,7 +848,7 @@
           </li>
 
           <li class="section-price-item">
-            <img src="/1 HW/img/размещение/29-1.jpg"
+            <img src="img/размещение/29-1.jpg"
               alt="Отель с большим бассейном и дежаками. Рядом: бар, очень красивые дома" class="section-price-img">
             <div class="section-price-item-block">
               <div class="section-price-day-rating">
@@ -900,7 +900,7 @@
           </li>
 
           <li class="section-price-item">
-            <img src="/1 HW/img/размещение/30.jpg"
+            <img src="img/размещение/30.jpg"
               alt="Изумрудный отель, посередине большой бассейн, вокруг пальмы и бар" class="section-price-img">
             <div class="section-price-item-block">
               <div class="section-price-day-rating">
@@ -952,7 +952,7 @@
           </li>
 
           <li class="section-price-item">
-            <img src="/1 HW/img/размещение/31.jpg"
+            <img src="img/размещение/31.jpg"
               alt="Высокие пальмы, лежаки вокруг бассейна, сам бассейн, зонты закрывающие от солнца в пирамидном стиле. Атмосфера тропиков"
               class="section-price-img">
             <div class="section-price-item-block">
@@ -1005,7 +1005,7 @@
           </li>
 
           <li class="section-price-item">
-            <img src="/1 HW/img/размещение/27.jpg" alt="Отель, Бассейн, сине-белая атмосфера" class="section-price-img">
+            <img src="img/размещение/27.jpg" alt="Отель, Бассейн, сине-белая атмосфера" class="section-price-img">
             <div class="section-price-item-block">
               <div class="section-price-day-rating">
                 <p class="section-price-day">
@@ -1056,7 +1056,7 @@
           </li>
 
           <li class="section-price-item">
-            <img src="/1 HW/img/размещение/29.jpg" alt="Белый отель с окнами вместо стен" class="section-price-img">
+            <img src="img/размещение/29.jpg" alt="Белый отель с окнами вместо стен" class="section-price-img">
             <div class="section-price-item-block">
               <div class="section-price-day-rating">
                 <p class="section-price-day">
@@ -1238,7 +1238,7 @@
               </li>
             </ul>
 
-            <img src="../1 HW/img/контакты/Layer 2 1.jpg" alt="Ресепшен" class="section-contacts-img">
+            <img src="img/контакты/Layer 2 1.jpg" alt="Ресепшен" class="section-contacts-img">
           </div>
         </div>
       </div>
