--- a/lionik/index.html
+++ b/lionik/index.html
@@ -13,9 +13,9 @@
   <link rel="mask-icon" href="img/favicon//safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-  <link rel="stylesheet" href="/5 LIONIC/css/normalize.css">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="/5 LIONIC/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     <div class="container header-container">
       <!-- ограничивает свободные метса по бокам -->
       <a href="" class="logo">
-        <img src="/5 LIONIC/img/Logo.svg" alt="logo Lionic" class="logo-img">
+        <img src="img/Logo.svg" alt="logo Lionic" class="logo-img">
       </a>
       <nav class="nav">
         <ul class="nav-list">
@@ -204,7 +204,7 @@
                 dolorum laborum praesentium, sed illo.
               </div>
               <div class="section-clients-user">
-                <img src="/5 LIONIC/img/274px-Kenny-sp.jpg" alt="" class="section-clients-avatar">
+                <img src="img/274px-Kenny-sp.jpg" alt="" class="section-clients-avatar">
                 <div class="section-clients-user-info">
                   <div class="section-clients-username">
                     John Armstrong
@@ -222,7 +222,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               </div>
               <div class="section-clients-user">
-                <img src="/5 LIONIC/img/274px-Kenny-sp.jpg" alt="" class="section-clients-avatar">
+                <img src="img/274px-Kenny-sp.jpg" alt="" class="section-clients-avatar">
                 <div class="section-clients-user-info">
                   <div class="section-clients-username">
                     Elizabeth Martin
@@ -240,7 +240,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               </div>
               <div class="section-clients-user">
-                <img src="/5 LIONIC/img/274px-Kenny-sp.jpg" alt="" class="section-clients-avatar">
+                <img src="img/274px-Kenny-sp.jpg" alt="" class="section-clients-avatar">
                 <div class="section-clients-user-info">
                   <div class="section-clients-username">
                     Elizabeth Martin
@@ -318,7 +318,7 @@
     <div class="container footer-container">
       <div class="footer-left">
         <a href="" class="footer-logo">
-          <img src="/5 LIONIC/img/Logo.svg" alt="logo Lionic" class="footer-logo-img">
+          <img src="img/Logo.svg" alt="logo Lionic" class="footer-logo-img">
         </a>
         <small class="footer-copyrights">
           Copyright ©2017. All Right Reserved
